--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
+    <header></header>
     <p class="number-el"></p>
     <div class="terminal-el">
         <p class="echo-el"></p>
         <input class="input-el" type="number" />
         <button class="button-el">Try</button>
     </div>
-    <footer class="footer-el">
+    <footer>
         <p></p>
     </footer>
     <script src="./assets/js/cyphero.js" type="text/javascript"></script>
