--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p class="number-el"></p>
     <div class="terminal-el">
         <p class="echo-el"></p>
-        <input class="input-el" type="number" />
+        <input class="input-el" type="number" maxlength="4" />
         <button class="button-el">Try</button>
     </div>
     <footer>
