--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./assets/js/cyphero.js" type="text/javascript"></script>
 </head>
 
 <body>
     <header></header>
     <p class="number-el"></p>
-    <div class="terminal-el">
+    <section class="terminal-el">
         <p class="echo-el"></p>
-        <input class="input-el" type="number" maxlength="4" />
-        <button class="button-el">Try</button>
-    </div>
+        <div class="user-el">
+            <input class="input-el" type="number" maxlength="4" />
+            <button class="button-el">Try</button>
+        </div>
+    </section>
     <footer>
         <p></p>
     </footer>
-    <script src="./assets/js/cyphero.js" type="text/javascript"></script>
 </body>
 
 </html>
